cmake_minimum_required(VERSION 3.28)
project(demo2)

set(CMAKE_CXX_STANDARD 17)

add_executable(demo2 main.cpp
        work2_1.cpp
        work2_1.h
        work2_2.cpp
        work2_2.h
        work2_3.cpp
        work2_3.h
        work2_4.cpp
        work2_4.h
        work2_6.cpp
        work2_6.h)
